--- a/css/styles.css
+++ b/css/styles.css
@@ -300,17 +300,12 @@ address {
 }
 
 .features-img {
-  display: block;
-  width: 270px;
-  height: 120px;
+  display: flex;
+  padding: 25px 100px;
   margin-bottom: 30px;
 
-  background-color: var(--background-color);
+   background-color: var(--background-color);
   border-radius: 4px;
-}
-
-.features-img > img {
-  padding: 25px 100px;
 }
 
 .features-subtitle {
